# 2022_microsoft_ionq_challenge

./: QuHackJack.py  README.md  _config.yml  ascii_card_reader.py  ascii_cards.txt  index.md  pyproject.toml  strings.py
