[tool.poetry]
name = "2022_microsoft_ionq_challenge"
version = "0.1.0"
description = ""
authors = ["KarimAED <karim.alaael-din@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "^0.34.1"
qiskit-ionq = "^0.1.4"
azure-quantum = "^0.22.187631"
matplotlib = "^3.5.1"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
